<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/gray">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/iconaLogin"
            android:src="@drawable/utente"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/icona_login" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/loginTitle"
            android:id="@+id/loginTitle"
            android:textSize="30dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erroreLog"
        android:id="@+id/errorText"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/Error"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/errorSpace"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etNome"
        android:id="@+id/etichettaNome"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edNome"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:imeOptions="actionNext"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etPass"
        android:id="@+id/etichettaPassword"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edPass"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:password="false"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpLogin"
            android:id="@+id/helpLogin"
            android:layout_gravity="center_horizontal"
            android:layout_alignWithParentIfMissing="false"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/loginButton"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tastoAccedi"
            android:id="@+id/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

</LinearLayout>