<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.funcool.nextdelivery.FineActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:background="@color/gray">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/fineTitleLayout" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/iconaFine"
            android:src="@drawable/arrivo"
            android:contentDescription="@string/iconaFine"
            android:layout_marginTop="10dp" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/fineTitle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/fineTitle"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messFine"
        android:id="@+id/fine"
        android:textColor="#000000"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distPercorsa"
        android:id="@+id/distPercorsa"
        android:textColor="#000000"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saluto"
        android:id="@+id/arrivederciLabel"
        android:textSize="25dp"
        android:textColor="@color/Ok" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/relativeLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpFine"
            android:id="@+id/helpFine"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/esci"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:textAlignment="center" />

        <Button
            android:id="@+id/esci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/esci"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>

</LinearLayout>
