<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/gray">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/titleLayout">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/iconaTitle"
            android:src="@drawable/scarico"
            android:contentDescription="@string/iconaScarico"
            android:layout_marginTop="10dp" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/scaricoTitle"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:id="@+id/infoLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/posLayout"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imageView"
                android:src="@drawable/posizione"
                android:contentDescription="@string/icona_posizione" />

            <Space
                android:layout_width="10px"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/dove"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/posizione"
                android:textSize="17dp"
                android:textColor="#000000"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/caricoLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livelloCarico"
                android:id="@+id/livelloCarico"
                android:textColor="#000000"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viaggioLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destinazione"
            android:id="@+id/destinazioneLabel"
            android:textColor="#000000"
            android:textSize="19dp"
            android:layout_marginTop="50dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nuovaDestinazione"
                android:textColor="@color/colorPrimary"
                android:textSize="21dp"
                android:layout_marginLeft="10dp"
                android:text="Agriturismo Cogoni Alessandro\nVia Viviani\nVillasimius"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanza"
            android:id="@+id/distanzaLabel"
            android:textColor="#000000"
            android:textSize="17dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/merciLayout">

        <TextView
            android:id="@+id/azioneSuMerci"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/azioneScarica"
            android:textSize="20dp"
            android:textColor="#000000" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@drawable/scrollbar"
            android:divider="#000000"
            android:dividerHeight="1dp"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/confermaLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpScarico"
            android:id="@+id/helpMsg"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/confermaButton"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:textAlignment="center" />

        <Button
            android:id="@+id/confermaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confermaCarico"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/nextLayout"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpNewDest"
            android:id="@+id/helpNextDel"
            android:layout_gravity="center_horizontal"
            android:layout_alignWithParentIfMissing="false"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="false"
            android:layout_above="@+id/nextDeliveryButton"
            android:layout_alignParentBottom="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confermaArrivo"
            android:id="@+id/nextDeliveryButton"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

</LinearLayout>